<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coupon Swipe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Coupon Swipe</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="title_activity_deal_shortlist">Deal Shortlist</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_deal_preferences">Deal Preferences</string>
    <string name="title_activity_view_deal">View Deal</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up_button">New User? Signup!</string>
    <string name="enter_first_name">First name</string>
    <string name="enter_last_name">Last name</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="register_button">SIGN UP</string>
    <string name="cancel_button">CANCEL</string>
    <string name="user_details">Profile</string>
    <string name="edit_profile_button">Edit</string>
    <string name="logout_button">Logout</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile_button">Update</string>
    <string name="discovery_preferences">Discovery Preferences</string>
    <string name="show_me_deals_within">Show Me Deals Within</string>
    <string name="no_deals_in_shortlist">No Deals in Shortlist</string>
    <string name="demo_coupon_title_1">Half Off Easter Treats from Cherry Moon Farms</string>
    <string name="demo_coupon_store_1">Cherry Moon Farms</string>
    <string name="demo_coupon_distance_1">12 miles away</string>
    <string name="demo_coupon_price_1">$15</string>
    <string name="demo_coupon_title_2">Easter or Springtime Combo Pack from Omaha Steaks (Up to 68% Off)</string>
    <string name="demo_coupon_store_2">Omaha Steaks</string>
    <string name="demo_coupon_distance_2">6 miles away</string>
    <string name="demo_coupon_price_2">$49.99</string>
    <string name="demo_coupon_title_3">Luxurious Omni near Union Square</string>
    <string name="demo_coupon_store_3">Omni San Francisco Hotel</string>
    <string name="demo_coupon_distance_3">32 miles away</string>
    <string name="demo_coupon_price_3">$159/night</string>
    <string name="deal_icon">Deal Icon</string>
    <string name="delete">Del</string>
    <string name="view">View</string>
    <string name="buy">Buy</string>
    <string name="button_divider">Button Divider</string>
    <string name="user_profile">Profile</string>
    <string name="shortlist">Deals Shortlist</string>
    <string name="network_unavailable_message">No Network Connectivity</string>

</resources>