<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="edu.cmu.couponswipe.ui.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImageView"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/AuthTitle" />

    <LinearLayout
        android:id="@+id/loginLinearLayout"
        style="@style/AuthFieldContainer"
        >

        <EditText android:id="@+id/firstNameEditText"
            android:hint="@string/enter_first_name"
            android:inputType="text"
            style="@style/AuthEditText" />

        <EditText android:id="@+id/lastNameEditText"
            android:hint="@string/enter_last_name"
            android:inputType="text"
            style="@style/AuthEditText" />

        <EditText android:id="@+id/userEmailEditText"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            style="@style/AuthEditText" />

        <EditText android:id="@+id/userPhoneEditText"
            android:hint="@string/enter_phone"
            android:inputType="number"
            style="@style/AuthEditText" />

        <EditText android:id="@+id/userPasswordEditText"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            style="@style/AuthEditText" />

        <EditText android:id="@+id/userPasswordConfirmEditText"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            style="@style/AuthEditText" />

    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginLinearLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/button_divider"/>

    <Button android:id="@+id/registerButton"
        style="@style/AuthButton"
        android:text="@string/register_button"
        android:onClick="signup"
        android:layout_below="@id/loginLinearLayout"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"
        />

    <Button android:id="@+id/cancelButton"
        style="@style/AuthButton"
        android:text="@string/cancel_button"
        android:onClick="cancel"
        android:layout_below="@id/loginLinearLayout"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"
        />


</RelativeLayout>
