<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="couponswipe.cmu.edu.couponswipe.ui.EditProfileActivity">

    <TextView android:text="@string/edit_profile" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_text"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_first_name"
        android:imeOptions="actionNext"
        android:inputType="text"></EditText>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_last_name"
        android:imeOptions="actionNext"
        android:inputType="text"></EditText>

    <EditText
        android:id="@+id/user_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"></EditText>

    <EditText
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_phone"
        android:imeOptions="actionNext"
        android:inputType="number"></EditText>

    <Button android:id="@+id/updateDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_profile_button"
        android:layout_marginTop="20dp"></Button>


</TableLayout>
