<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="couponswipe.cmu.edu.couponswipe.ui.LoginActivity">

    <TextView android:text="@string/login_text" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logintext"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />


    <EditText android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext" android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"></EditText>

    <EditText android:id="@+id/user_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext" android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"></EditText>



    <Button android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:onClick="login"
        android:layout_marginTop="20dp"></Button>



    <Button android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:onClick="signup"
        android:layout_marginTop="20dp"></Button>



</TableLayout>
