<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="10dp"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dealIconImageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/deal_icon"
            android:paddingTop="10dp"
            android:layout_gravity="left"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/dealTitleTextView"
            android:paddingTop="10dp"
            android:paddingLeft="2dp"
            android:layout_gravity="left|top"
            android:layout_below="@+id/dealIconImageView"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_toStartOf="@+id/linearLayout"
            android:layout_weight="2"
            android:textColor="#ff000000" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right|top"
            android:id="@+id/linearLayout"
            android:layout_weight="1">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/deleteDealButton"
                android:layout_alignTop="@+id/dealTitleTextView"
                android:layout_toEndOf="@+id/dealTitleTextView" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:id="@+id/viewDealButton"
                android:layout_alignTop="@+id/deleteDealButton"
                android:layout_toEndOf="@+id/deleteDealButton"
                android:onClick="viewDeal" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                android:id="@+id/buyDealButton"
                android:layout_alignTop="@+id/viewDealButton"
                android:layout_toEndOf="@+id/viewDealButton" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>